git ignore et modif html

--- a/index.html
+++ b/index.html
@@ -7,20 +7,28 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <form id="weatherForm">
-            <label for="weatherInput"> Choisissez votre ville</label>
-            <div id="weatherContainer">
-                <input
-                    id="weatherInput"
-                    type="text"
-                    placeholder="ex: Marseille"
-                    autocomplete="off"
-                />
-                <div id="weatherContainer__autoComplete"></div>
-            </div>
-        </form>
+        <section class="section-weather">
+            <form id="weatherForm">
+                <label for="weatherInput"> Choisissez votre ville</label>
+                <div id="weatherContainer">
+                    <input
+                        id="weatherInput"
+                        type="text"
+                        placeholder="ex: Marseille"
+                        autocomplete="off"
+                    />
+                    <div id="weatherContainer__autoComplete"></div>
+                </div>
+            </form>
 
-        <div class="weatherContainer"></div>
+            <div class="weatherContainer"></div>
+        </section>
+
+        <section class="section-map">
+            <div id="map" data-locations=""></div>
+        </section>
+
+        <!-- Elements pour autres exercices -->
 
         <!-- <form id="movieForm">
             <label for="movieInput"> Choisissez votre univers</label>
