re-organisation du code, separation du js en modules

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         </section>
 
         <!-- Elements pour autres exercices -->
-
         <!-- <form id="movieForm">
             <label for="movieInput"> Choisissez votre univers</label>
             <input id="movieInput" type="text" placeholder="ex: Marvel" />
@@ -46,6 +45,6 @@
         <!-- axios -->
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <!-- main script -->
-        <script src="app.js"></script>
+        <script type="module" src="javascript/app.js"></script>
     </body>
 </html>
