--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <!-- mapbox -->
         <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.0/mapbox-gl.js"></script>
         <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.0/mapbox-gl.css" rel="stylesheet" />
         <link rel="stylesheet" href="style.css" />
-        <!-- mapbox -->
     </head>
     <body>
         <section class="section-weather">
@@ -28,31 +28,24 @@
         </section>
 
         <section class="section-forecast">
-            <canvas id="myChart" width="400" height="400"></canvas>
+            <div class="chartContainer">
+                <canvas id="meteoChart"></canvas>
+            </div>
         </section>
 
         <section class="section-map">
             <div id="map" data-locations=""></div>
         </section>
 
-        <!-- Elements pour autres exercices -->
-        <!-- <form id="movieForm">
-            <label for="movieInput"> Choisissez votre univers</label>
-            <input id="movieInput" type="text" placeholder="ex: Marvel" />
-            <button>Chercher</button>
-        </form>
-
-        <div class="imgContainer"></div>
-
-        <div class="albumsContainer"></div> -->
-
         <!-- SCRIPTS -->
         <!-- cdn polyfill pour Algolia -->
         <script src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CObject.entries%2CObject.assign"></script>
         <!-- axios -->
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <!-- chart -->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+        <script src="javascript/forecastchart.js"></script>
         <!-- main script -->
         <script type="module" src="javascript/app.js"></script>
-        <script src="javascript/forecastchart.js"></script>
     </body>
 </html>
