changement pour nav clavier

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                             placeholder="ex: Marseille"
                             autocomplete="off"
                         />
-                        <div id="weatherContainer__autoComplete"></div>
+
+                        <div class="autoCompleteBox"></div>
                     </div>
                 </form>
 
