fix cumul events et datalist

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                     <div id="weatherContainer">
                         <input
                             id="weatherInput"
+                            list="weatherContainer__autoComplete"
                             type="text"
                             placeholder="ex: Marseille"
                             autocomplete="off"
                         />
-
-                        <div class="autoCompleteBox"></div>
+                        <datalist id="weatherContainer__autoComplete"></datalist>
                     </div>
                 </form>
 
