--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <!-- section meteo du jour -->
         <section class="section-weather">
             <div class="section-weather__container">
                 <form id="weatherForm">
@@ -30,12 +31,14 @@
             </div>
         </section>
 
+        <!-- section meteo prévisionnelle sur 5 jours -->
         <section class="section-forecast">
             <div class="chartContainer">
                 <canvas id="meteoChart"></canvas>
             </div>
         </section>
 
+        <!-- section mapbox -->
         <section class="section-map">
             <div id="map" data-locations=""></div>
         </section>
